# python-project-50

./: Makefile  README.md  fix_bom.py  pyproject.toml  sonar-project.properties
.github/workflows/: python-ci.yml
gendiff/: __init__.py  __main__.py  cli.py  diff_builder.py  generate_diff.py  parser.py
gendiff/formatters/: __init__.py  diff_builder.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py  generate_diff.py  parser.py
tests/: test_generate_diff.py
tests/fixtures/: result_json_flat.txt
