[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference"
readme = "README.md"
authors = [{ name = "Rusinov Vitalii", email = "rvi90@bk.ru" }]
requires-python = "<4.0,>=3.12"
dependencies = []

[project.scripts]
gendiff = "gendiff.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]